--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  core:
+    path: ./packages/core
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  logger: ^1.1.0
   google_fonts: ^2.3.1
   flutter_hooks: ^0.18.2+1
-  dio: ^4.0.4
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
